# ingram-check

./: .gitignore  LICENSE  Makefile  README.md  ingram-check.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ingram_checker/: __init__.py  __main__.py  backend.py  cli.py  config.py  ghostscript.py  models.py  native_ops.py  page_ranges.py  pdf_info.py  report.py
src/ingram_checker/checks/: __init__.py  barcode.py  base.py  color.py  content.py  cover_size.py  crop_marks.py  fonts.py  ink_density.py  margins.py  page_size.py  pdfx.py  resolution.py
src/ingram_checker/fixers/: __init__.py  base.py  color_converter.py  crop_stripper.py  icc_remover.py  image_downsampler.py  image_resampler.py  page_padder.py  spot_converter.py
tests/: conftest.py  test_backend.py  test_cli.py  test_native_ops.py
tests/test_checks/: test_color.py  test_page_size.py
tests/test_fixers/: test_icc_remover.py  test_page_padder.py
