[project]
name = "ingram-checker"
version = "0.1.1"
description = "Ingram Lightning Source PDF compliance checker and fixer"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Jacob Smullyan", email = "smulloni@smullyan.org" },
]
keywords = ["pdf", "ingram", "lightning-source", "print-on-demand", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Printing",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pikepdf>=9.0.0",
    "pymupdf>=1.24.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/saggingmeniscus/ingram-check"
Repository = "https://github.com/saggingmeniscus/ingram-check"
Issues = "https://github.com/saggingmeniscus/ingram-check/issues"

[project.scripts]
ingram-check = "ingram_checker.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingram_checker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
